Fixing issue with pre tag overflow in CSS Grid element

--- a/sass/site/_global.scss
+++ b/sass/site/_global.scss
@@ -14,25 +14,26 @@
     grid-gap: 60px;
     @include default-grid-container;
 
-    grid-template-columns: 3fr 1fr;
+    grid-template-columns: minmax(0, 800px) minmax(0, 300px);
     grid-template-areas: 
         "main sidebar";
 
     @media screen and (max-width: 1024px) {
-        grid-template-areas: 
-            "main main"
-            "sidebar sidebar";
+	    grid-template-columns: minmax(0, auto);
+	    grid-template-areas:
+			    "main"
+                "sidebar";
     }
 }
 
 .page #content { /* Narrow main content and no sidebar on pages */
 
-    grid-template-columns: 1fr 10fr 1fr;
+    grid-template-columns: 1fr minmax(0, 800px) 1fr;
     grid-template-areas: 
         ". main .";
 
     @media screen and (max-width: 1024px) {
-        grid-template-columns: 1fr;
+        grid-template-columns: minmax(0, auto);
         grid-template-areas: 
             "main";
     }
