--- a/sass/typography/_copy.scss
+++ b/sass/typography/_copy.scss
@@ -25,7 +25,6 @@ pre {
 	max-width: 100%;
 	overflow: auto;
 	padding: 1.6em;
-	white-space: pre-wrap;
 }
 
 code, kbd, tt, var {
