--- a/sass/typography/_typography.scss
+++ b/sass/typography/_typography.scss
@@ -8,22 +8,7 @@ textarea {
 	font-family: $font__main;
 	@include font-size(1);
 	line-height: $font__line-height-body;
-
-    /* Prevent long words or urls from breaking out of containers */
-    /* https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
-    
-    /* These are technically the same, but use both */
-    overflow-wrap: break-word;
     word-wrap: break-word;
-
-    -ms-word-break: break-all;
-    word-break: break-word;
-
-    /* Adds a hyphen where the word breaks, if supported (No Blink) */
-    -ms-hyphens: auto;
-    -moz-hyphens: auto;
-    -webkit-hyphens: auto;
-    hyphens: auto;
 }
 
 @import "headings";
